data/derived/comb/progs/unify/prog4749.ml.out
Characters 57-60:
  wwhile(y b, b);;
         ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
